# bitflips

./: .gitignore  LICENSE  Makefile.am  README.md  bf_main.c  bf_math.c  bf_math.h  bf_poisson.c  bf_poisson.h  bitflips  bitflips.h  bitflips.py
tests/: Makefile.am
